Address Firefox layout issue
- Fix broken overall layout in Mozilla browsers
- Reduce page flicker in certain scenarios
- Remove svgs from images directory

--- a/client/src/components/layouts/TrackHeader.css
+++ b/client/src/components/layouts/TrackHeader.css
@@ -19,66 +19,21 @@ limitations under the License.
   width: 100%;
 }
 
-#next-track-header-waves-container {
-  position: fixed;
-  width: 100%;
-}
-
 #next-track-header {
   align-items: center;
-  background: -webkit-linear-gradient(top, #870bcc 0%,#e51e96 100%);
   color: var(--header-color);
   display: flex;
   height: 140px;
   padding: 0 var(--page-content-padding);
 }
 
-#next-track-header-waves {
-  align-items: center;
-  background: -webkit-linear-gradient(top, #870bcc 0%,#e51e96 100%);
-  color: var(--header-color);
-  display: flex;
-  height: var(--track-header-height);
-  padding: 0 var(--page-content-padding);
-}
-
-#next-track-header .ui.header,
-#next-track-header-waves .ui.header {
+#next-track-header .ui.header {
   align-items: end;
   display: flex;
   position: absolute;
   top: 25px;
 }
 
-#next-track-header .ui.header .content,
-#next-track-header-waves .ui.header .content {
+#next-track-header .ui.header .content {
   margin: 4px;
-}
-
-#next-wave,
-#next-wave-alt {
-  height: 50px;
-  position: absolute;
-  width: 100%;
-}
-
-#next-wave {
-  background: url('../../images/wave.svg');
-}
-
-#next-wave-alt {
-  background: url('../../images/wave-alt.svg');
-}
-
-#next-wave-container {
-  background: -webkit-linear-gradient(top, #de209d 0%,#ea4c9d 100%);
-  height: 41px;
-  position: relative;
-  top: -3px;
-}
-
-#next-track-header-subheader {
-  font-size: .45em;
-  margin-top: 7px;
-  min-height: 15px;
 }
